--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -1,6 +1,7 @@
 main {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   padding: 2em;
 }
@@ -24,4 +25,34 @@ main {
   color: white;
   border: none;
   cursor: pointer;
+}
+
+.meme--container {
+  margin-top: 1em;
+  width: 500px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: gray;
+}
+
+.meme--image {
+  width: 100%;
+}
+
+.meme--top--text {
+  position: absolute;
+  color: white;
+  font-size: 3em;
+  top: 0.5em;
+  z-index: 1;
+}
+
+.meme--bottom--text {
+  position: absolute;
+  color: white;
+  font-size: 3em;
+  bottom: 0.5em;
+  z-index: 1;
 }
